--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="js/main.js"></script>
+
+    <link rel="stylesheet" href="css/styles.css" />
+
     <title>Wordle Game</title>
 </head>
 <body>
-    <h1> Wordle Game </h1>
-    
+    <div id="container">
+        <div id="game">
+            <header>
+                <h1 class="title">WORDLE</h1>
+            </header>
+            <div id="board-container">
+                <div id="board">
+                    
+                </div>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
