created keyboard and used CSS to style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <button data-key="l">l</button>
                     <div class="spacer-half"></div>
                 </div>
-                <div class="keyboard-row"></div>
+                <div class="keyboard-row">
                     <button data-key="enter" clas="wide-button">Enter</button>
                     <button data-key="z">z</button>
                     <button data-key="x">x</button>
@@ -56,6 +56,7 @@
                     <button data-key="n">n</button>
                     <button data-key="m">m</button>
                     <button data-key="del" clas="wide-button">Del</button>
+                </div>
             </div>
         </div>
     </div>    
